--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -35,7 +35,10 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Loaded training pairs  (13481429, 3)\n"
+      "Loaded training pairs  (13481429, 3)\n",
+      "Loading views info ...\n",
+      "Merged with train df\n",
+      "Merged with test df\n"
      ]
     }
    ],
@@ -45,7 +48,7 @@
     "\n",
     "import pandas as pd\n",
     "import lightgbm as lgb\n",
-    "from main import sample_customers,process_date_col\n",
+    "from main import sample_customers, process_date_col, get_purchase_info\n",
     "\n",
     "# load training pairs\n",
     "df = pd.read_csv(\"data/labels_training.txt\")\n",
@@ -73,6 +76,16 @@
     "# update df\n",
     "df = pd.merge(df, aggr_views, right_index=True, left_on=['customerId', 'productId'])\n",
     "print(\"Merged with train df\")\n",
+    "\n",
+    "## add purchase info\n",
+    "customer_purchase_count, product_purchase_count = get_purchase_info()\n",
+    "# add customer purchase info ?\n",
+    "df = pd.merge(df, customer_purchase_count, left_on=['customerId'], right_on=['customerId'], how='left')\n",
+    "df.customerPurchaseCount.fillna(0, inplace=True)\n",
+    "# add product purchase info ?\n",
+    "df = pd.merge(df, product_purchase_count, left_on=['productId'], right_on=['productId'], how='left')\n",
+    "df.productPurchaseCount.fillna(0, inplace=True)\n",
+    "\n",
     "# add other features\n",
     "# ...\n",
     "\n",
@@ -81,12 +94,19 @@
     "df_test = pd.merge(df_test, customers, left_on=['customerId'], right_on=['customerId'], how='left')\n",
     "df_test = pd.merge(df_test, products, left_on=['productId'], right_on=['productId'], how='left')\n",
     "df_test = pd.merge(df_test, aggr_views, right_index=True, left_on=['customerId', 'productId'])\n",
-    "print(\"Merged with test df\")"
+    "print(\"Merged with test df\")\n",
+    "\n",
+    "# add customer purchase info ?\n",
+    "df_test = pd.merge(df_test, customer_purchase_count, left_on=['customerId'], right_on=['customerId'], how='left')\n",
+    "df_test.customerPurchaseCount.fillna(0, inplace=True)\n",
+    "# add product purchase info ?\n",
+    "df_test = pd.merge(df_test, product_purchase_count, left_on=['productId'], right_on=['productId'], how='left')\n",
+    "df_test.productPurchaseCount.fillna(0, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,38 +140,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "customerId                    0\n",
-       "productId                     0\n",
-       "purchase_probability    3345261\n",
-       "isFemale                   4022\n",
-       "country                       0\n",
-       "yearOfBirth                4022\n",
-       "isPremier                  4022\n",
-       "brand                         0\n",
-       "price                         0\n",
-       "productType                   0\n",
-       "onSale                        0\n",
-       "dateOnSite_year              81\n",
-       "dateOnSite_month             81\n",
-       "dateOnSite_day               81\n",
-       "dateOnSite_dayname            0\n",
-       "viewOnly                      0\n",
-       "changeThumbnail               0\n",
-       "viewCatwalk                   0\n",
-       "view360                       0\n",
-       "sizeGuide                     0\n",
+       "customerId                     0\n",
+       "productId                      0\n",
+       "purchase_probability     3345261\n",
+       "isFemale                    4022\n",
+       "country                        0\n",
+       "yearOfBirth                 4022\n",
+       "isPremier                   4022\n",
+       "brand                          0\n",
+       "price                          0\n",
+       "productType                    0\n",
+       "onSale                         0\n",
+       "dateOnSite_year               81\n",
+       "dateOnSite_month              81\n",
+       "dateOnSite_day                81\n",
+       "dateOnSite_dayname             0\n",
+       "viewOnly                       0\n",
+       "changeThumbnail                0\n",
+       "viewCatwalk                    0\n",
+       "view360                        0\n",
+       "sizeGuide                      0\n",
+       "customerPurchaseCount          0\n",
+       "productPurchaseCount           0\n",
        "dtype: int64"
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 4
     }
    ],
    "source": [
@@ -160,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,35 +205,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "isFemale              float64\n",
-       "country                 int64\n",
-       "yearOfBirth           float64\n",
-       "isPremier             float64\n",
-       "brand                   int64\n",
-       "price                 float64\n",
-       "productType             int64\n",
-       "onSale                   bool\n",
-       "dateOnSite_year       float64\n",
-       "dateOnSite_month      float64\n",
-       "dateOnSite_day        float64\n",
-       "dateOnSite_dayname      int64\n",
-       "viewOnly                int64\n",
-       "changeThumbnail         int64\n",
-       "viewCatwalk             int64\n",
-       "view360                 int64\n",
-       "sizeGuide               int64\n",
+       "isFemale                 float64\n",
+       "country                    int64\n",
+       "yearOfBirth              float64\n",
+       "isPremier                float64\n",
+       "brand                      int64\n",
+       "price                    float64\n",
+       "productType                int64\n",
+       "onSale                      bool\n",
+       "dateOnSite_year          float64\n",
+       "dateOnSite_month         float64\n",
+       "dateOnSite_day           float64\n",
+       "dateOnSite_dayname         int64\n",
+       "viewOnly                   int64\n",
+       "changeThumbnail            int64\n",
+       "viewCatwalk                int64\n",
+       "view360                    int64\n",
+       "sizeGuide                  int64\n",
+       "customerPurchaseCount    float64\n",
+       "productPurchaseCount     float64\n",
        "dtype: object"
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 7
     }
    ],
    "source": [
@@ -220,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -241,113 +265,113 @@
      "name": "stdout",
      "text": [
       "[LightGBM] [Info] Number of positive: 245519, number of negative: 11887767\n",
-      "[LightGBM] [Warning] Auto-choosing row-wise multi-threading, the overhead of testing was 0.432571 seconds.\n",
+      "[LightGBM] [Warning] Auto-choosing row-wise multi-threading, the overhead of testing was 0.738184 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
-      "[LightGBM] [Info] Total Bins 937\n",
-      "[LightGBM] [Info] Number of data points in the train set: 12133286, number of used features: 17\n",
+      "[LightGBM] [Info] Total Bins 1355\n",
+      "[LightGBM] [Info] Number of data points in the train set: 12133286, number of used features: 19\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.020235 -> initscore=-3.879891\n",
       "[LightGBM] [Info] Start training from score -3.879891\n",
-      "[1]\tvalid_0's auc: 0.803118\n",
-      "[2]\tvalid_0's auc: 0.808845\n",
-      "[3]\tvalid_0's auc: 0.820178\n",
-      "[4]\tvalid_0's auc: 0.822914\n",
-      "[5]\tvalid_0's auc: 0.826834\n",
-      "[6]\tvalid_0's auc: 0.829243\n",
-      "[7]\tvalid_0's auc: 0.833165\n",
-      "[8]\tvalid_0's auc: 0.834289\n",
-      "[9]\tvalid_0's auc: 0.835711\n",
-      "[10]\tvalid_0's auc: 0.83686\n",
-      "[11]\tvalid_0's auc: 0.837524\n",
-      "[12]\tvalid_0's auc: 0.838487\n",
-      "[13]\tvalid_0's auc: 0.83927\n",
-      "[14]\tvalid_0's auc: 0.840294\n",
-      "[15]\tvalid_0's auc: 0.841176\n",
-      "[16]\tvalid_0's auc: 0.842106\n",
-      "[17]\tvalid_0's auc: 0.842854\n",
-      "[18]\tvalid_0's auc: 0.843216\n",
-      "[19]\tvalid_0's auc: 0.844137\n",
-      "[20]\tvalid_0's auc: 0.844611\n",
-      "[21]\tvalid_0's auc: 0.845223\n",
-      "[22]\tvalid_0's auc: 0.845962\n",
-      "[23]\tvalid_0's auc: 0.846539\n",
-      "[24]\tvalid_0's auc: 0.84704\n",
-      "[25]\tvalid_0's auc: 0.847909\n",
-      "[26]\tvalid_0's auc: 0.848242\n",
-      "[27]\tvalid_0's auc: 0.848782\n",
-      "[28]\tvalid_0's auc: 0.849312\n",
-      "[29]\tvalid_0's auc: 0.849932\n",
-      "[30]\tvalid_0's auc: 0.850337\n",
-      "[31]\tvalid_0's auc: 0.850845\n",
-      "[32]\tvalid_0's auc: 0.851248\n",
-      "[33]\tvalid_0's auc: 0.851789\n",
-      "[34]\tvalid_0's auc: 0.852024\n",
-      "[35]\tvalid_0's auc: 0.852355\n",
-      "[36]\tvalid_0's auc: 0.852627\n",
-      "[37]\tvalid_0's auc: 0.8529\n",
-      "[38]\tvalid_0's auc: 0.853233\n",
-      "[39]\tvalid_0's auc: 0.853628\n",
-      "[40]\tvalid_0's auc: 0.853791\n",
-      "[41]\tvalid_0's auc: 0.854035\n",
-      "[42]\tvalid_0's auc: 0.854269\n",
-      "[43]\tvalid_0's auc: 0.854383\n",
-      "[44]\tvalid_0's auc: 0.854622\n",
-      "[45]\tvalid_0's auc: 0.854756\n",
-      "[46]\tvalid_0's auc: 0.854976\n",
-      "[47]\tvalid_0's auc: 0.855242\n",
-      "[48]\tvalid_0's auc: 0.85546\n",
-      "[49]\tvalid_0's auc: 0.855598\n",
-      "[50]\tvalid_0's auc: 0.855699\n",
-      "[51]\tvalid_0's auc: 0.855892\n",
-      "[52]\tvalid_0's auc: 0.85601\n",
-      "[53]\tvalid_0's auc: 0.856177\n",
-      "[54]\tvalid_0's auc: 0.856395\n",
-      "[55]\tvalid_0's auc: 0.856541\n",
-      "[56]\tvalid_0's auc: 0.85667\n",
-      "[57]\tvalid_0's auc: 0.856746\n",
-      "[58]\tvalid_0's auc: 0.856799\n",
-      "[59]\tvalid_0's auc: 0.856916\n",
-      "[60]\tvalid_0's auc: 0.857004\n",
-      "[61]\tvalid_0's auc: 0.857126\n",
-      "[62]\tvalid_0's auc: 0.857188\n",
-      "[63]\tvalid_0's auc: 0.857308\n",
-      "[64]\tvalid_0's auc: 0.857457\n",
-      "[65]\tvalid_0's auc: 0.857603\n",
-      "[66]\tvalid_0's auc: 0.857665\n",
-      "[67]\tvalid_0's auc: 0.857738\n",
-      "[68]\tvalid_0's auc: 0.857839\n",
-      "[69]\tvalid_0's auc: 0.857913\n",
-      "[70]\tvalid_0's auc: 0.85799\n",
-      "[71]\tvalid_0's auc: 0.858085\n",
-      "[72]\tvalid_0's auc: 0.858143\n",
-      "[73]\tvalid_0's auc: 0.858202\n",
-      "[74]\tvalid_0's auc: 0.858278\n",
-      "[75]\tvalid_0's auc: 0.858347\n",
-      "[76]\tvalid_0's auc: 0.858424\n",
-      "[77]\tvalid_0's auc: 0.858428\n",
-      "[78]\tvalid_0's auc: 0.858487\n",
-      "[79]\tvalid_0's auc: 0.858542\n",
-      "[80]\tvalid_0's auc: 0.85861\n",
-      "[81]\tvalid_0's auc: 0.858689\n",
-      "[82]\tvalid_0's auc: 0.858733\n",
-      "[83]\tvalid_0's auc: 0.858819\n",
-      "[84]\tvalid_0's auc: 0.858864\n",
-      "[85]\tvalid_0's auc: 0.858904\n",
-      "[86]\tvalid_0's auc: 0.858943\n",
-      "[87]\tvalid_0's auc: 0.859007\n",
-      "[88]\tvalid_0's auc: 0.85906\n",
-      "[89]\tvalid_0's auc: 0.859118\n",
-      "[90]\tvalid_0's auc: 0.859157\n",
-      "[91]\tvalid_0's auc: 0.859187\n",
-      "[92]\tvalid_0's auc: 0.859201\n",
-      "[93]\tvalid_0's auc: 0.859254\n",
-      "[94]\tvalid_0's auc: 0.859335\n",
-      "[95]\tvalid_0's auc: 0.859349\n",
-      "[96]\tvalid_0's auc: 0.859404\n",
-      "[97]\tvalid_0's auc: 0.859468\n",
-      "[98]\tvalid_0's auc: 0.859489\n",
-      "[99]\tvalid_0's auc: 0.859466\n",
-      "[100]\tvalid_0's auc: 0.859486\n"
+      "[1]\tvalid_0's auc: 0.799641\n",
+      "[2]\tvalid_0's auc: 0.810663\n",
+      "[3]\tvalid_0's auc: 0.817683\n",
+      "[4]\tvalid_0's auc: 0.823077\n",
+      "[5]\tvalid_0's auc: 0.827708\n",
+      "[6]\tvalid_0's auc: 0.831495\n",
+      "[7]\tvalid_0's auc: 0.833874\n",
+      "[8]\tvalid_0's auc: 0.834995\n",
+      "[9]\tvalid_0's auc: 0.837136\n",
+      "[10]\tvalid_0's auc: 0.838569\n",
+      "[11]\tvalid_0's auc: 0.839579\n",
+      "[12]\tvalid_0's auc: 0.841018\n",
+      "[13]\tvalid_0's auc: 0.841854\n",
+      "[14]\tvalid_0's auc: 0.842843\n",
+      "[15]\tvalid_0's auc: 0.843649\n",
+      "[16]\tvalid_0's auc: 0.84414\n",
+      "[17]\tvalid_0's auc: 0.845097\n",
+      "[18]\tvalid_0's auc: 0.846067\n",
+      "[19]\tvalid_0's auc: 0.846764\n",
+      "[20]\tvalid_0's auc: 0.847378\n",
+      "[21]\tvalid_0's auc: 0.848035\n",
+      "[22]\tvalid_0's auc: 0.848929\n",
+      "[23]\tvalid_0's auc: 0.849493\n",
+      "[24]\tvalid_0's auc: 0.849948\n",
+      "[25]\tvalid_0's auc: 0.850452\n",
+      "[26]\tvalid_0's auc: 0.851399\n",
+      "[27]\tvalid_0's auc: 0.851916\n",
+      "[28]\tvalid_0's auc: 0.852462\n",
+      "[29]\tvalid_0's auc: 0.85287\n",
+      "[30]\tvalid_0's auc: 0.853204\n",
+      "[31]\tvalid_0's auc: 0.853503\n",
+      "[32]\tvalid_0's auc: 0.854176\n",
+      "[33]\tvalid_0's auc: 0.85448\n",
+      "[34]\tvalid_0's auc: 0.854711\n",
+      "[35]\tvalid_0's auc: 0.855081\n",
+      "[36]\tvalid_0's auc: 0.855422\n",
+      "[37]\tvalid_0's auc: 0.855764\n",
+      "[38]\tvalid_0's auc: 0.856079\n",
+      "[39]\tvalid_0's auc: 0.856606\n",
+      "[40]\tvalid_0's auc: 0.856792\n",
+      "[41]\tvalid_0's auc: 0.857094\n",
+      "[42]\tvalid_0's auc: 0.857287\n",
+      "[43]\tvalid_0's auc: 0.8576\n",
+      "[44]\tvalid_0's auc: 0.857804\n",
+      "[45]\tvalid_0's auc: 0.858062\n",
+      "[46]\tvalid_0's auc: 0.858246\n",
+      "[47]\tvalid_0's auc: 0.858417\n",
+      "[48]\tvalid_0's auc: 0.858573\n",
+      "[49]\tvalid_0's auc: 0.858766\n",
+      "[50]\tvalid_0's auc: 0.859027\n",
+      "[51]\tvalid_0's auc: 0.859263\n",
+      "[52]\tvalid_0's auc: 0.859348\n",
+      "[53]\tvalid_0's auc: 0.859508\n",
+      "[54]\tvalid_0's auc: 0.859762\n",
+      "[55]\tvalid_0's auc: 0.859932\n",
+      "[56]\tvalid_0's auc: 0.860099\n",
+      "[57]\tvalid_0's auc: 0.860221\n",
+      "[58]\tvalid_0's auc: 0.860373\n",
+      "[59]\tvalid_0's auc: 0.860451\n",
+      "[60]\tvalid_0's auc: 0.860585\n",
+      "[61]\tvalid_0's auc: 0.860731\n",
+      "[62]\tvalid_0's auc: 0.860869\n",
+      "[63]\tvalid_0's auc: 0.860963\n",
+      "[64]\tvalid_0's auc: 0.861042\n",
+      "[65]\tvalid_0's auc: 0.861033\n",
+      "[66]\tvalid_0's auc: 0.861164\n",
+      "[67]\tvalid_0's auc: 0.86123\n",
+      "[68]\tvalid_0's auc: 0.861322\n",
+      "[69]\tvalid_0's auc: 0.8614\n",
+      "[70]\tvalid_0's auc: 0.861523\n",
+      "[71]\tvalid_0's auc: 0.861574\n",
+      "[72]\tvalid_0's auc: 0.861717\n",
+      "[73]\tvalid_0's auc: 0.861729\n",
+      "[74]\tvalid_0's auc: 0.861731\n",
+      "[75]\tvalid_0's auc: 0.861763\n",
+      "[76]\tvalid_0's auc: 0.861868\n",
+      "[77]\tvalid_0's auc: 0.861918\n",
+      "[78]\tvalid_0's auc: 0.861991\n",
+      "[79]\tvalid_0's auc: 0.861999\n",
+      "[80]\tvalid_0's auc: 0.862101\n",
+      "[81]\tvalid_0's auc: 0.862186\n",
+      "[82]\tvalid_0's auc: 0.862262\n",
+      "[83]\tvalid_0's auc: 0.86229\n",
+      "[84]\tvalid_0's auc: 0.862364\n",
+      "[85]\tvalid_0's auc: 0.86242\n",
+      "[86]\tvalid_0's auc: 0.862471\n",
+      "[87]\tvalid_0's auc: 0.862534\n",
+      "[88]\tvalid_0's auc: 0.862562\n",
+      "[89]\tvalid_0's auc: 0.862568\n",
+      "[90]\tvalid_0's auc: 0.862638\n",
+      "[91]\tvalid_0's auc: 0.862685\n",
+      "[92]\tvalid_0's auc: 0.862701\n",
+      "[93]\tvalid_0's auc: 0.862846\n",
+      "[94]\tvalid_0's auc: 0.86288\n",
+      "[95]\tvalid_0's auc: 0.862889\n",
+      "[96]\tvalid_0's auc: 0.862923\n",
+      "[97]\tvalid_0's auc: 0.862975\n",
+      "[98]\tvalid_0's auc: 0.863001\n",
+      "[99]\tvalid_0's auc: 0.863026\n",
+      "[100]\tvalid_0's auc: 0.863088\n"
      ]
     }
    ],
@@ -358,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,18 +391,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0.9999986202112507"
+       "0.9920538613539628"
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 11
     }
    ],
    "source": [
@@ -426,7 +450,7 @@
     }
    ],
    "source": [
-    "df_test"
+    "df_test.to_csv('out.csv')"
    ]
   },
   {
