new script for lightgbm experiments

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -265,7 +265,7 @@
      "name": "stdout",
      "text": [
       "[LightGBM] [Info] Number of positive: 245519, number of negative: 11887767\n",
-      "[LightGBM] [Warning] Auto-choosing row-wise multi-threading, the overhead of testing was 0.738184 seconds.\n",
+      "[LightGBM] [Warning] Auto-choosing row-wise multi-threading, the overhead of testing was 0.477118 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 1355\n",
@@ -281,103 +281,56 @@
       "[7]\tvalid_0's auc: 0.833874\n",
       "[8]\tvalid_0's auc: 0.834995\n",
       "[9]\tvalid_0's auc: 0.837136\n",
-      "[10]\tvalid_0's auc: 0.838569\n",
-      "[11]\tvalid_0's auc: 0.839579\n",
-      "[12]\tvalid_0's auc: 0.841018\n",
-      "[13]\tvalid_0's auc: 0.841854\n",
-      "[14]\tvalid_0's auc: 0.842843\n",
-      "[15]\tvalid_0's auc: 0.843649\n",
-      "[16]\tvalid_0's auc: 0.84414\n",
-      "[17]\tvalid_0's auc: 0.845097\n",
-      "[18]\tvalid_0's auc: 0.846067\n",
-      "[19]\tvalid_0's auc: 0.846764\n",
-      "[20]\tvalid_0's auc: 0.847378\n",
-      "[21]\tvalid_0's auc: 0.848035\n",
-      "[22]\tvalid_0's auc: 0.848929\n",
-      "[23]\tvalid_0's auc: 0.849493\n",
-      "[24]\tvalid_0's auc: 0.849948\n",
-      "[25]\tvalid_0's auc: 0.850452\n",
-      "[26]\tvalid_0's auc: 0.851399\n",
-      "[27]\tvalid_0's auc: 0.851916\n",
-      "[28]\tvalid_0's auc: 0.852462\n",
-      "[29]\tvalid_0's auc: 0.85287\n",
-      "[30]\tvalid_0's auc: 0.853204\n",
-      "[31]\tvalid_0's auc: 0.853503\n",
-      "[32]\tvalid_0's auc: 0.854176\n",
-      "[33]\tvalid_0's auc: 0.85448\n",
-      "[34]\tvalid_0's auc: 0.854711\n",
-      "[35]\tvalid_0's auc: 0.855081\n",
-      "[36]\tvalid_0's auc: 0.855422\n",
-      "[37]\tvalid_0's auc: 0.855764\n",
-      "[38]\tvalid_0's auc: 0.856079\n",
-      "[39]\tvalid_0's auc: 0.856606\n",
-      "[40]\tvalid_0's auc: 0.856792\n",
-      "[41]\tvalid_0's auc: 0.857094\n",
-      "[42]\tvalid_0's auc: 0.857287\n",
-      "[43]\tvalid_0's auc: 0.8576\n",
-      "[44]\tvalid_0's auc: 0.857804\n",
-      "[45]\tvalid_0's auc: 0.858062\n",
-      "[46]\tvalid_0's auc: 0.858246\n",
-      "[47]\tvalid_0's auc: 0.858417\n",
-      "[48]\tvalid_0's auc: 0.858573\n",
-      "[49]\tvalid_0's auc: 0.858766\n",
-      "[50]\tvalid_0's auc: 0.859027\n",
-      "[51]\tvalid_0's auc: 0.859263\n",
-      "[52]\tvalid_0's auc: 0.859348\n",
-      "[53]\tvalid_0's auc: 0.859508\n",
-      "[54]\tvalid_0's auc: 0.859762\n",
-      "[55]\tvalid_0's auc: 0.859932\n",
-      "[56]\tvalid_0's auc: 0.860099\n",
-      "[57]\tvalid_0's auc: 0.860221\n",
-      "[58]\tvalid_0's auc: 0.860373\n",
-      "[59]\tvalid_0's auc: 0.860451\n",
-      "[60]\tvalid_0's auc: 0.860585\n",
-      "[61]\tvalid_0's auc: 0.860731\n",
-      "[62]\tvalid_0's auc: 0.860869\n",
-      "[63]\tvalid_0's auc: 0.860963\n",
-      "[64]\tvalid_0's auc: 0.861042\n",
-      "[65]\tvalid_0's auc: 0.861033\n",
-      "[66]\tvalid_0's auc: 0.861164\n",
-      "[67]\tvalid_0's auc: 0.86123\n",
-      "[68]\tvalid_0's auc: 0.861322\n",
-      "[69]\tvalid_0's auc: 0.8614\n",
-      "[70]\tvalid_0's auc: 0.861523\n",
-      "[71]\tvalid_0's auc: 0.861574\n",
-      "[72]\tvalid_0's auc: 0.861717\n",
-      "[73]\tvalid_0's auc: 0.861729\n",
-      "[74]\tvalid_0's auc: 0.861731\n",
-      "[75]\tvalid_0's auc: 0.861763\n",
-      "[76]\tvalid_0's auc: 0.861868\n",
-      "[77]\tvalid_0's auc: 0.861918\n",
-      "[78]\tvalid_0's auc: 0.861991\n",
-      "[79]\tvalid_0's auc: 0.861999\n",
-      "[80]\tvalid_0's auc: 0.862101\n",
-      "[81]\tvalid_0's auc: 0.862186\n",
-      "[82]\tvalid_0's auc: 0.862262\n",
-      "[83]\tvalid_0's auc: 0.86229\n",
-      "[84]\tvalid_0's auc: 0.862364\n",
-      "[85]\tvalid_0's auc: 0.86242\n",
-      "[86]\tvalid_0's auc: 0.862471\n",
-      "[87]\tvalid_0's auc: 0.862534\n",
-      "[88]\tvalid_0's auc: 0.862562\n",
-      "[89]\tvalid_0's auc: 0.862568\n",
-      "[90]\tvalid_0's auc: 0.862638\n",
-      "[91]\tvalid_0's auc: 0.862685\n",
-      "[92]\tvalid_0's auc: 0.862701\n",
-      "[93]\tvalid_0's auc: 0.862846\n",
-      "[94]\tvalid_0's auc: 0.86288\n",
-      "[95]\tvalid_0's auc: 0.862889\n",
-      "[96]\tvalid_0's auc: 0.862923\n",
-      "[97]\tvalid_0's auc: 0.862975\n",
-      "[98]\tvalid_0's auc: 0.863001\n",
-      "[99]\tvalid_0's auc: 0.863026\n",
-      "[100]\tvalid_0's auc: 0.863088\n"
+      "[10]\tvalid_0's auc: 0.838569\n"
      ]
     }
    ],
    "source": [
-    "num_round = 100\n",
+    "num_round = 10\n",
     "bst = lgb.train(param, train_dset, num_round, valid_sets=[val_dset])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[LightGBM] [Info] Number of positive: 163260, number of negative: 7925597\n",
+      "[LightGBM] [Warning] Auto-choosing row-wise multi-threading, the overhead of testing was 0.440917 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 1355\n",
+      "[LightGBM] [Info] Number of data points in the train set: 8088857, number of used features: 19\n",
+      "[LightGBM] [Info] Number of positive: 162703, number of negative: 7926154\n",
+      "[LightGBM] [Warning] Auto-choosing row-wise multi-threading, the overhead of testing was 0.307390 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 1355\n",
+      "[LightGBM] [Info] Number of data points in the train set: 8088857, number of used features: 19\n",
+      "[LightGBM] [Info] Number of positive: 165075, number of negative: 7923783\n",
+      "[LightGBM] [Warning] Auto-choosing row-wise multi-threading, the overhead of testing was 0.423005 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 1355\n",
+      "[LightGBM] [Info] Number of data points in the train set: 8088858, number of used features: 19\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.020183 -> initscore=-3.882509\n",
+      "[LightGBM] [Info] Start training from score -3.882509\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.020114 -> initscore=-3.885997\n",
+      "[LightGBM] [Info] Start training from score -3.885997\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.020408 -> initscore=-3.871224\n",
+      "[LightGBM] [Info] Start training from score -3.871224\n"
+     ]
+    }
+   ],
+   "source": [
+    "# bst.best_score['valid_0']['auc']\n",
+    "kfold = GroupKFold(n_splits=3)\n",
+    "folds = kfold.split(X=df.iloc[train_ind], groups=customerId.iloc[train_ind])\n",
+    "eval_hist = lgb.cv(param, train_dset, num_round, nfold=5, folds=folds)"
    ]
   },
   {
